# garuda-tunnel

./: .gitignore  README.md  pyproject.toml  sitecustomize.py  vulture_whitelist.py
.github/workflows/: release.yml  test.yml
docs/artifacts/: 2026-05-30-kube-targets-baseline.md
docs/specs/: 2026-05-16-garuda-tunnel-design.md  2026-05-16-tunstrap-design.md  2026-05-20-feature-fetch-files-design.md  2026-05-21-auto-stop-idle-design.md  2026-05-30-kube-targets-design.md  2026-06-24-session-reuse-design.md  2026-06-25-cli-run-modes-design.md  2026-06-25-ssh-agent-fallback-design.md
docs/superpowers/plans/: 2026-05-16-garuda-tunnel.md  2026-05-30-kube-targets.md  2026-06-24-session-reuse-task-a.md  2026-06-25-cli-run-modes.md
garuda_tunnel/: __init__.py  __main__.py  _worker.py  activity.py  cli.py  daemon.py  exceptions.py  fetcher.py  identity.py  kube.py  manager.py  schemas.py  session.py  ssh.py
tests/: README.md  conftest.py
tests/integration/: conftest.py  docker-compose.yml  test_auto_stop.py  test_cli_modes.py  test_fetch_files.py  test_fetch_security.py  test_kube_targets.py  test_multiport.py  test_remote_targets.py  test_start.py  test_status.py  test_stop.py
tests/unit/: conftest.py  test_activity.py  test_cli_input.py  test_cli_parsing.py  test_cli_run.py  test_cli_runner.py  test_cli_start_validation.py  test_cli_stop_status_parsing.py  test_daemon_ipc.py  test_envrender.py  test_exceptions.py  test_fetcher_errno_map.py  test_fetcher_unit.py  test_identity.py  test_identity_dir.py  test_idle_watchdog.py  test_kube_parse.py  test_kube_patch.py  test_kube_run.py  test_kube_san.py  test_kube_url.py  test_manager_fetch.py  test_manager_pkey.py  test_manager_required.py  test_output_kube.py  test_output_schema.py  test_schemas.py  test_schemas_fetch.py  test_schemas_kube.py  test_schemas_remote_targets.py  test_schemas_required.py  test_schemas_ssh_options.py  test_session_dir.py  test_ssh_transport.py
tests/unit/fixtures/kube/: hostname_split_horizon.yaml  multi_context.yaml  single_internal_ip.yaml
tunstrap/: __init__.py  __main__.py  _worker.py  activity.py  cli.py  cli_input.py  daemon.py  envrender.py  exceptions.py  fetcher.py  identity.py  kube.py  manager.py  schemas.py  session.py  ssh.py
