[project]
name = "garuda-tunnel"
description = "SSH tunnel manager for ephemeral environments"
authors = [{name = "Alex MKX"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "sshtunnel>=0.4.0,<0.5",
    "paramiko>=4.0,<5",
    "pydantic>=2.13,<3",
    "click>=8.3,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "pytest-cov>=5.0",
    "mypy>=1.13",
    "ruff>=0.8",
]

[project.scripts]
garuda-tunnel = "garuda_tunnel.cli:main"

[project.urls]
Homepage = "https://github.com/AlexMKX/garuda-tunnel"
Issues   = "https://github.com/AlexMKX/garuda-tunnel/issues"

[build-system]
requires      = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "garuda_tunnel/_version.py"

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.mypy]
strict         = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["paramiko", "paramiko.*", "sshtunnel", "sshtunnel.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = ["integration: requires docker (sshd containers)"]
addopts = "-m 'not integration' --cov=garuda_tunnel --cov-report=term-missing"
